tests/neg-custom-args/captures/effect-swaps.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/effect-swaps.scala:64:8 ----------------------------------
63 |      Result:
64 |        Future: // error, type mismatch
   |      ^
   |      Found:    Result.Ok[Future[T^'s1]^{fr, contextual$1}]
   |      Required: Result[Future[T], Nothing]
   |
   |      Note that capability `fr` is not included in capture set {}.
   |
65 |          fr.await.ok
   |--------------------------------------------------------------------------------------------------------------------
   |Inline stack trace
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   |This location contains code that was inlined from effect-swaps.scala:41
41 |    boundary(Ok(body))
   |             ^^^^^^^^
    --------------------------------------------------------------------------------------------------------------------
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/effect-swaps.scala:69:10 ---------------------------------
69 |          Future: fut ?=> // error, type mismatch
   |          ^
   |Capability `contextual$9` outlives its scope: it leaks into outer capture set 's2 which is owned by method fail4.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (contextual$9: boundary.Label[Result[Future[T^'s3]^'s4, E^'s5]^'s6]^'s7) ?->{fr, async} Future[T^'s8]^{fr, contextual$9}
   |Required: (boundary.Label[Result[Future[T^'s9]^'s2, E^'s10]]^) ?=> Future[T^'s9]^'s2
   |
   |where:    ?=> refers to a root capability created in method fail4 when checking argument to parameter body of method make
   |          ^   refers to the root capability caps.any
   |
70 |            fr.await.ok
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/effect-swaps.scala:73:35 ---------------------------------
73 |        Result.make[Future[T], E]: lbl ?=> // error: type mismatch
   |                                   ^
   |Found:    (lbl: boundary.Label[Result[Future[T^'s11]^'s12, E^'s13]^'s14]^'s15) ?->{fr, async} Future[T^'s16]^{fr, lbl}
   |Required: (boundary.Label[Result[Future[T], E]]^) ?=> Future[T]
   |
   |Note that capability `fr` is not included in capture set {}.
   |
   |where:    ?=> refers to a root capability created in method fail5 when checking argument to parameter body of method make
   |          ^   refers to the root capability caps.any
   |
74 |          Future: fut ?=>
75 |            fr.await.ok
   |
   | longer explanation available when compiling with `-explain`
